--- a/EveFirstMate/Web.config
+++ b/EveFirstMate/Web.config
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=PC-JAK486\SQLEXPRESS;Initial Catalog=EVEDB;Persist Security Info=True;User ID=evefm;Password=evefmBiii" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-EveFirstMate-20130426160526;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-EveFirstMate-20130426160526.mdf" providerName="System.Data.SqlClient" />-->
-    <add name="EVEEntities" connectionString="metadata=res://*/Entities.csdl|res://*/Entities.ssdl|res://*/Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=EVEDB;persist security info=True;user id=sa;password=saBiii06;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="EVEEntities" connectionString="metadata=res://*/Entities.csdl|res://*/Entities.ssdl|res://*/Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=EVEDB;persist security info=True;user id=evefm;password=evefmBiii;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="EVEEntities" connectionString="metadata=res://*/Entities.csdl|res://*/Entities.ssdl|res://*/Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-JAK486\SQLEXPRESS;Initial Catalog=EVEDB;Persist Security Info=True;User ID=evefm;Password=evefmBiii;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
