--- a/EveFirstMate/EveFirstMate.csproj
+++ b/EveFirstMate/EveFirstMate.csproj
@@ -178,10 +178,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="agtAgent.cs">
+    <Compile Include="Models\agtAgent.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="agtAgentType.cs">
+    <Compile Include="Models\agtAgentType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="App_Start\AuthConfig.cs" />
@@ -189,237 +189,237 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="chrAncestry.cs">
+    <Compile Include="Models\chrAncestry.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="chrAttribute.cs">
+    <Compile Include="Models\chrAttribute.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="chrBloodline.cs">
+    <Compile Include="Models\chrBloodline.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="chrFaction.cs">
+    <Compile Include="Models\chrFaction.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="chrRace.cs">
+    <Compile Include="Models\chrRace.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="crpActivity.cs">
+    <Compile Include="Models\crpActivity.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crpNPCCorporation.cs">
+    <Compile Include="Models\crpNPCCorporation.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crpNPCCorporationDivision.cs">
+    <Compile Include="Models\crpNPCCorporationDivision.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crpNPCDivision.cs">
+    <Compile Include="Models\crpNPCDivision.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crtCategory.cs">
+    <Compile Include="Models\crtCategory.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crtCertificate.cs">
+    <Compile Include="Models\crtCertificate.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crtClass.cs">
+    <Compile Include="Models\crtClass.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crtRecommendation.cs">
+    <Compile Include="Models\crtRecommendation.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="crtRelationship.cs">
+    <Compile Include="Models\crtRelationship.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="dgmAttributeCategory.cs">
+    <Compile Include="Models\dgmAttributeCategory.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="dgmAttributeType.cs">
+    <Compile Include="Models\dgmAttributeType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="dgmEffect.cs">
+    <Compile Include="Models\dgmEffect.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="dgmTypeAttribute.cs">
+    <Compile Include="Models\dgmTypeAttribute.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="dgmTypeEffect.cs">
+    <Compile Include="Models\dgmTypeEffect.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entities.Context.cs">
+    <Compile Include="Models\Entities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Entities.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entities.cs">
+    <Compile Include="Models\Entities.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entities.Designer.cs">
+    <Compile Include="Models\Entities.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Entities.edmx</DependentUpon>
     </Compile>
-    <Compile Include="eveUnit.cs">
+    <Compile Include="Models\eveUnit.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="invBlueprintType.cs">
+    <Compile Include="Models\invBlueprintType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invCategory.cs">
+    <Compile Include="Models\invCategory.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invContrabandType.cs">
+    <Compile Include="Models\invContrabandType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invControlTowerResource.cs">
+    <Compile Include="Models\invControlTowerResource.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invControlTowerResourcePurpos.cs">
+    <Compile Include="Models\invControlTowerResourcePurpos.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invFlag.cs">
+    <Compile Include="Models\invFlag.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invGroup.cs">
+    <Compile Include="Models\invGroup.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invItem.cs">
+    <Compile Include="Models\invItem.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invMarketGroup.cs">
+    <Compile Include="Models\invMarketGroup.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invMetaGroup.cs">
+    <Compile Include="Models\invMetaGroup.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invMetaType.cs">
+    <Compile Include="Models\invMetaType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invName.cs">
+    <Compile Include="Models\invName.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invPosition.cs">
+    <Compile Include="Models\invPosition.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invType.cs">
+    <Compile Include="Models\invType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invTypeMaterial.cs">
+    <Compile Include="Models\invTypeMaterial.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invTypeReaction.cs">
+    <Compile Include="Models\invTypeReaction.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="invUniqueName.cs">
+    <Compile Include="Models\invUniqueName.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapCelestialStatistic.cs">
+    <Compile Include="Models\mapCelestialStatistic.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapConstellation.cs">
+    <Compile Include="Models\mapConstellation.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapConstellationJump.cs">
+    <Compile Include="Models\mapConstellationJump.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapDenormalize.cs">
+    <Compile Include="Models\mapDenormalize.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapJump.cs">
+    <Compile Include="Models\mapJump.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapLandmark.cs">
+    <Compile Include="Models\mapLandmark.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapLocationScene.cs">
+    <Compile Include="Models\mapLocationScene.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapLocationWormholeClass.cs">
+    <Compile Include="Models\mapLocationWormholeClass.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapRegion.cs">
+    <Compile Include="Models\mapRegion.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapSolarSystem.cs">
+    <Compile Include="Models\mapSolarSystem.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapSolarSystemJump.cs">
+    <Compile Include="Models\mapSolarSystemJump.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="mapUniverse.cs">
+    <Compile Include="Models\mapUniverse.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="planetSchematic.cs">
+    <Compile Include="Models\planetSchematic.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="planetSchematicsPinMap.cs">
+    <Compile Include="Models\planetSchematicsPinMap.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="planetSchematicsTypeMap.cs">
+    <Compile Include="Models\planetSchematicsTypeMap.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ramActivity.cs">
+    <Compile Include="Models\ramActivity.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ramAssemblyLine.cs">
+    <Compile Include="Models\ramAssemblyLine.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ramAssemblyLineStation.cs">
+    <Compile Include="Models\ramAssemblyLineStation.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ramAssemblyLineType.cs">
+    <Compile Include="Models\ramAssemblyLineType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ramAssemblyLineTypeDetailPerCategory.cs">
+    <Compile Include="Models\ramAssemblyLineTypeDetailPerCategory.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ramAssemblyLineTypeDetailPerGroup.cs">
+    <Compile Include="Models\ramAssemblyLineTypeDetailPerGroup.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ramInstallationTypeContent.cs">
+    <Compile Include="Models\ramInstallationTypeContent.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ramTypeRequirement.cs">
+    <Compile Include="Models\ramTypeRequirement.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="staOperation.cs">
+    <Compile Include="Models\staOperation.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="staService.cs">
+    <Compile Include="Models\staService.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="staStation.cs">
+    <Compile Include="Models\staStation.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="staStationType.cs">
+    <Compile Include="Models\staStationType.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="translationTable.cs">
+    <Compile Include="Models\translationTable.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="trnTranslation.cs">
+    <Compile Include="Models\trnTranslation.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="trnTranslationColumn.cs">
+    <Compile Include="Models\trnTranslationColumn.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="trnTranslationLanguage.cs">
+    <Compile Include="Models\trnTranslationLanguage.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="warCombatZone.cs">
+    <Compile Include="Models\warCombatZone.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
-    <Compile Include="warCombatZoneSystem.cs">
+    <Compile Include="Models\warCombatZoneSystem.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -444,19 +444,19 @@
     <Content Include="Content\themes\smoothness-mod\jquery-ui-1.10.2.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <EntityDeploy Include="Entities.edmx">
+    <EntityDeploy Include="Models\Entities.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Entities.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Entities.Context.tt">
+    <Content Include="Models\Entities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Entities.edmx</DependentUpon>
       <LastGenOutput>Entities.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Entities.edmx.diagram">
+    <Content Include="Models\Entities.edmx.diagram">
       <DependentUpon>Entities.edmx</DependentUpon>
     </Content>
-    <Content Include="Entities.tt">
+    <Content Include="Models\Entities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Entities.edmx</DependentUpon>
       <LastGenOutput>Entities.cs</LastGenOutput>
