--- a/EveFirstMate/EveFirstMate.csproj
+++ b/EveFirstMate/EveFirstMate.csproj
@@ -180,7 +180,6 @@
   <ItemGroup>
     <Compile Include="Common\BaseController.cs" />
     <Compile Include="Common\JsonNetResult.cs" />
-    <Compile Include="Controllers\MarketGroupsController.cs" />
     <Compile Include="Models\agtAgent.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
@@ -425,6 +424,7 @@
     <Compile Include="Models\warCombatZoneSystem.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\EveViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\main.css" />
@@ -501,8 +501,6 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
