changing the layout to fixed width
making the layout fixed instead of percentage, adding a new knockout
binding to render the text from the description field for invTypes

--- a/EveFirstMate/EveFirstMate.csproj
+++ b/EveFirstMate/EveFirstMate.csproj
@@ -165,6 +165,7 @@
     <Content Include="Scripts\knockout-3.0.0beta.js" />
     <Content Include="Scripts\knockout-delegatedEvents.js" />
     <Content Include="Scripts\knockout-delegatedEvents.min.js" />
+    <Content Include="Scripts\knockout-extensions.js" />
     <Content Include="Scripts\knockout-postbox.js" />
     <Content Include="Scripts\knockout-postbox.min.js" />
     <Content Include="Scripts\knockout.mapping.debug.js" />
