upgrade to knockoutjs 3.0.0
also upgraded jquery and normalized the naming convention used by the js
files to be consistent.

--- a/EveFirstMate/EveFirstMate.csproj
+++ b/EveFirstMate/EveFirstMate.csproj
@@ -156,21 +156,17 @@
     <Content Include="Content\themes\smoothness-mod\jquery-ui-1.10.3.css" />
     <Content Include="Content\themes\smoothness-mod\jquery-ui-1.10.3.min.css" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\jquery-2.0.2.js" />
-    <Content Include="Scripts\jquery-2.0.2.min.js" />
+    <Content Include="Scripts\jquery-2.0.3.js" />
+    <Content Include="Scripts\jquery-2.0.3.min.js" />
     <Content Include="Scripts\jquery-ui-1.10.3.js" />
     <Content Include="Scripts\jquery-ui-1.10.3.min.js" />
-    <Content Include="Scripts\knockout-2.3.0.debug.js" />
-    <Content Include="Scripts\knockout-2.3.0.js" />
-    <Content Include="Scripts\knockout-3.0.0beta.debug.js" />
-    <Content Include="Scripts\knockout-3.0.0beta.js" />
+    <Content Include="Scripts\knockout-3.0.0.js" />
+    <Content Include="Scripts\knockout-3.0.0.min.js" />
     <Content Include="Scripts\knockout-delegatedEvents.js" />
     <Content Include="Scripts\knockout-delegatedEvents.min.js" />
     <Content Include="Scripts\knockout-extensions.js" />
     <Content Include="Scripts\knockout-postbox.js" />
     <Content Include="Scripts\knockout-postbox.min.js" />
-    <Content Include="Scripts\knockout.mapping.debug.js" />
-    <Content Include="Scripts\knockout.mapping.js" />
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\_references.js" />
